--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,7 @@
 <html id="allHTML" class="background1" lang="en">
 <head>
   <title>FAT VEGAN</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/dropdown.css">
+  <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Signika" rel="stylesheet">
 </head>
