Menu filtering, changing background

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 
-<html id="allHTML" class="background1" lang="en">
+<html id="allHTML" lang="en">
 <head>
   <title>FAT VEGAN</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Signika" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Vollkorn" rel="stylesheet">
 </head>
 
 <body>
-  <div id="fatvegan" class="site"></div>
+  <div id="fatvegan"></div>
   <script src="scripts/fatvegan.js"></script>
 </body>
 </html>
