Responsive and visual fixes (#21)
* Visual fixes and beta version of responsive site

* Content and responsive design fixed

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>FAT VEGAN</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Vollkorn" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Eczar" rel="stylesheet">
 </head>
 
 <body>
